k8s/apps/getmoto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moto
  namespace: cwx
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: moto
