k8s/apps/getmoto/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: moto
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`moto.chenwx.top`)
      kind: Rule
      services:
        - name: moto
          namespace: cwx
          port: 80
